# duplicate-master

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  PACKAGING.md  README.md  build_tool.py  dev-requirements.txt  duplicatemaster.spec  file-duplicate-finder.py  filedupfinder.spec  pyproject.toml  pytest.ini  requirements.txt  version_info.txt
.github/workflows/: build.yml
gui/: gui_app.py
src/duplicatemaster/: __main__.py  benchmark.py  cli.py  deletion.py  demo.py  exporter.py  hasher.py  logger.py  scanner.py
src/filedupfinder/: __main__.py  analyzer.py  cli.py  deduper.py  deletion.py  demo.py  exporter.py  hasher.py  logger.py  scanner.py
src/gui/: gui_app.py
tests/: test_analyzer.py  test_cli.py  test_deduper.py  test_deletion.py  test_demo.py  test_exporter.py  test_hasher.py  test_logger.py  test_performance.py  test_scanner.py
